# btc_widget

./: .gitignore  README.md
BTCWidget/: BTCWidgetApp.swift  ContentView.swift
BTCWidget/BTCWidget/: AppDelegate.swift  BTCWidgetApp.swift  ContentView.swift  Extensions.swift
BTCWidget/BTCWidget/Models/: BitcoinData.swift  PendingPair.swift  TradingModels.swift
BTCWidget/BTCWidget/Services/: BackendService.swift  BinanceTradingService.swift  BitcoinAPIService.swift  KeychainManager.swift  LiveActivityManager.swift  PendingPairManager.swift  PushNotificationManager.swift
BTCWidget/BTCWidget_ext/: BTCLiveActivity.swift  BTCWidgetBundle.swift
BTCWidgetExtension/: BTCWidgetBundle.swift
BTCWidgetExtension/Models/: PriceEntry.swift
BTCWidgetExtension/Provider/: BTCTimelineProvider.swift
BTCWidgetExtension/Views/: HomeScreenWidgets.swift
Shared/: Extensions.swift
btc-trading-backend/: .env.example  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  fly.toml
btc-trading-backend/src/: config.rs  main.rs
btc-trading-backend/src/auth/: jwt.rs  middleware.rs  mod.rs
btc-trading-backend/src/binance/: client.rs  mod.rs  models.rs  signing.rs
btc-trading-backend/src/notifications/: apns.rs  mod.rs  monitor.rs
btc-trading-backend/src/routes/: account.rs  auth.rs  debug.rs  grid.rs  history.rs  mod.rs  notifications.rs  order.rs  price.rs  trailing.rs
btc-trading-backend/src/trading/: grid.rs  mod.rs  profit.rs
btc-trading-backend/src/trailing/: mod.rs  monitor.rs
btc-trading-backend/test-dashboard/: README.md  index.html
(+17 files in other folders)
