[package]
name = "btc-trading-backend"
version = "0.1.0"
edition = "2021"
authors = ["German Heller"]
description = "Secure Binance trading backend for BTCWidget"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for Binance API
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Cryptography
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
jsonwebtoken = "9"
rand = "0.8"

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Rate limiting
governor = "0.6"

# Async utilities
futures = "0.3"

# Error handling
thiserror = "1"
anyhow = "1"

# Apple Push Notifications
a2 = "0.10"  # APNs client

[profile.release]
# Maximum optimization for security and performance
opt-level = 3
lto = true           # Link-time optimization - smaller, faster binary
codegen-units = 1    # Better optimization
panic = "abort"      # Smaller binary
strip = true         # Strip symbols - harder to reverse engineer
